<package>
  <name>dynamixel_motor</name>
  <version>0.3.0</version>
  <description>This stack contains packages that are used to interface with Robotis
        Dynamixel line of servo motors. This stack was tested with and fully
        supports AX-12, AX-18, RX-24, RX-28, MX-28, RX-64, MX-64, EX-106 and
        MX-106 models.</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dynamixel_motor</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Antons Rebguns</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>dynamixel_tutorials</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>dynamixel_driver</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
