<package>
  <name>dynamixel_msgs</name>
  <version>0.3.0</version>
  <description>Common messages used throughout dynamixel_motor stack.</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dynamixel_msgs</url>
  <url type="bugtracker">https://github.com/OTL/dynamixel_motor</url>

  <author>Antons Rebguns</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>