<package>
  <name>dynamixel_tutorials</name>
  <version>0.3.0</version>
  <description>Example configuration and launch file for dynamixel_motor stack.</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dynamixel_tutorials</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Antons Rebguns</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <export>

  </export>
</package>